new endpoint in ArticleController